--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -133,7 +133,7 @@
   
 1. Right-click Windows PowerShell shortcut in the taskbar and click **Run ISE as Administrator**.
 
-2. In the Windows PowerShell ISE window, click **File**, then **Open**. In the **Open** dialog box, browse to the **D:\Labfiles\Lab02\Starter** folder, click **New-AzureRm20533C02VM.ps1** and click **Open**.
+2. In the Windows PowerShell ISE window, click **File**, then **Open**. In the **Open** dialog box, browse to the D:\\Labfiles\\Lab02\\Starter folder, click **New-AzureRm20533C02VM.ps1** and click **Open**.
 
 3. In the Windows PowerShell ISE window, click **Debug** and then click **Run/Continue**.
 
@@ -175,7 +175,7 @@
 
 3. On the HQ blade, in the **Connected devices** section, click **gatewayARM**. On the gatewayARM blade, take the note of the value of the **Public IP address** entry. 
 
-4. Start File Explorer and browse to D:\Configfiles\Lab02 folder.
+4. Start File Explorer and browse to D:\\Configfiles\\Lab02 folder.
 
 5. Right-click on the **NetworkConfig.txt** file and click **Open with** in the menu.
 
