--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -156,7 +156,7 @@
   
 1. In Internet Explorer, in the Azure portal, on the **ADATUM-BRANCH-VNET** blade, on the **VPN connections** tile, verify that the **Gateway** entry has an IP address assigned to it. If this is not the case, wait until IP address does appear. 
 
-2. On MIA-CL1, in the Windows PowerShell ISE window, click **File**, then **Open**. In the **Open** dialog box, browse to the **D:\Labfiles\Lab02\Starter** folder, click **New-AzureRm20533C02Gateway.ps1** and click **Open**.
+2. On MIA-CL1, in the Windows PowerShell ISE window, click **File**, then **Open**. In the **Open** dialog box, browse to the D:\\Labfiles\\Lab02\\Starter folder, click **New-AzureRm20533C02Gateway.ps1** and click **Open**.
 
 3. In the Windows PowerShell ISE, click **Debug** and then click **Run/Continue**.
 
