--- a/Instructions/20533C_LAB_AK_03.md
+++ b/Instructions/20533C_LAB_AK_03.md
@@ -52,7 +52,7 @@
   
 1. On MIA-CL1, right-click Windows PowerShell on the taskbar and click **Run ISE as Administrator**.
 
-2. In the Windows PowerShell Integrated Scripting Environment (ISE) window, open the **New-AzureRm20533C03VM.ps1** script at **D:\Labfiles\Lab03\Starter\**
+2. In the Windows PowerShell Integrated Scripting Environment (ISE) window, open the **New-AzureRm20533C03VM.ps1** script at D:\\Labfiles\\Lab03\\Starter\\
 
 3. In the Windows PowerShell ISE window, review the content of the script.
 
@@ -113,7 +113,7 @@
   
 1. On MIA-CL1, on the taskbar, click the **Visual Studio** icon. If prompted with the message that the evaluation period has ended, click the **Sign in** and provide your Microsoft account credentials. Then, on the **Host your next project in Visual Studio Team Services** page, click the **Not now, maybe later** link. Next, click **Close**. 
 
-2. In Visual Studio, click **File**, click **Open**, click **Project/Solution**, and then browse to **D:\Labfiles\Lab03\Starter\ResDev\ResDevLinuxDeploy**.
+2. In Visual Studio, click **File**, click **Open**, click **Project/Solution**, and then browse to D:\\Labfiles\\Lab03\\Starter\\ResDev\\ResDevLinuxDeploy.
 
 3. In the Open Project window, click **ResDevLinuxDeploy.sln**, and then click **Open**.
 
@@ -215,7 +215,7 @@
   
 1. In the Windows PowerShell ISE window that you opened in the previous exercise, click **File**, and then click **Open**. 
 
-2. In the **Open** dialog box, navigate to the **D:\Labfiles\Lab03\Starter\ResDev** folder.
+2. In the **Open** dialog box, navigate to the D:\\Labfiles\\Lab03\\Starter\\ResDev folder.
 
 3. Click **ResDevWindowsDeploy.ps1**, and then click **Open**.
 
@@ -224,7 +224,7 @@
 
 5. Switch to Visual Studio and click **File**, click **Open**, and then click **File**.
 
-6. In the **Open File** dialog box, navigate to the **D:\Labfiles\Lab03\Starter\ResDev** folder.
+6. In the **Open File** dialog box, navigate to the D:\\Labfiles\\Lab03\\Starter\\ResDev folder.
 
 7. Click **ResDevWindowsDeployTemplate.json**, and then click **Open**.
 > **Note:** Note that the template has the same structure as the template for the Linux virtual machines in the previous exercise. The only difference between the two templates is the variables declaring the image and operating system details.
