--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -238,7 +238,7 @@
   
 #### Task 1: Install and configure IIS by using DSC and Windows PowerShell
   
-1. On MIA-CL1, start File Explorer and browse to the **D:\Labfiles\Lab04\Starter** folder.
+1. On MIA-CL1, start File Explorer and browse to the D:\\Labfiles\\Lab04\\Starter folder.
 
 2. In the D:\Labfiles\Lab04\Starter folder, right-click on the **IISInstall.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE**.
 
@@ -246,7 +246,7 @@
 
 4. Close the Windows PowerShell ISE window.
 
-5. In the File Explorer, right click on the **D:\Labfiles\Lab04\Starter\DeployAzureDSC.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE** window with the current directory set to **D:\Labfiles\Lab04\Starter**
+5. In the File Explorer, right click on the D:\\Labfiles\\Lab04\\Starter\\DeployAzureDSC.ps1 file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE** window with the current directory set to D:\\Labfiles\\Lab04\\Starter
 
 6. Review the content of the script. Note the variables that it uses, including the storage account and its key. The script first retrieves the storage account from the resource group, and then publishes the DSC configuration defined in the **Install.ps1** into it, placing it in the default DSC container named **windows-powershell-dsc**, stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed in the previous lab by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive. 
 
