--- a/Instructions/20533C_LAB_AK_05.md
+++ b/Instructions/20533C_LAB_AK_05.md
@@ -112,7 +112,7 @@
 
 4. On the **File** menu, click **Open**, and then click **Project/Solution**.
 
-5. Browse to the folder D:\LabFiles\Lab05\Starter\AdatumWebsite, click **AdatumWebsite.sln**, and then click **Open**.
+5. Browse to the folder D:\\LabFiles\\Lab05\\Starter\\AdatumWebsite, click **AdatumWebsite.sln**, and then click **Open**.
 
 6. On the **Debug** menu, click **Start Debugging**. This will open a new Microsoft Edge window.
 
@@ -183,7 +183,7 @@
 
 7. On the **File** menu, click **Open**, and then click **Project/Solution**.
 
-8. Browse to the folder D:\LabFiles\Lab05\Starter\NewAdatumWebsite.
+8. Browse to the folder D:\\LabFiles\\Lab05\\Starter\\NewAdatumWebsite.
 
 9. Click **AdatumWebsite.sln**, and then click **Open**.
 
@@ -311,7 +311,7 @@ Verify that the command returns **True**. If not, keep re-running the same comma
 
 14. In the Visual Studio, on the **File** menu, click **Open**, and then click **Project/Solution**.
 
-15. Browse to the folder D:\LabFiles\Lab05\Starter\AdatumWebsite.
+15. Browse to the folder D:\\LabFiles\\Lab05\\Starter\\AdatumWebsite.
 
 16. Click **AdatumWebsite.sln**, and then click **Open**.
 
