--- a/Instructions/20533C_LAB_AK_06.md
+++ b/Instructions/20533C_LAB_AK_06.md
@@ -91,7 +91,7 @@
 
 7. Press the **F5** key to execute the command in the script pane.
 
-8. Examine the output in the console pane and verify that the content of the **D:\Labfiles\Lab06\Starter\asset-images** folder was copied to the Azure Storage account container **asset-images**.
+8. Examine the output in the console pane and verify that the content of the D:\\Labfiles\\Lab06\\Starter\\asset-images folder was copied to the Azure Storage account container **asset-images**.
 
 9. In the Azure portal, on the storage account blade, click **Overview**.
 
@@ -122,7 +122,7 @@
 
 5. Click **File**, and then click **Open**.
 
-6. In the **Open** dialog box, browse to **D:\Labfiles\Lab06\Starter\**, click **New-FileShare_20533C06.ps1**, and then click **Open**.
+6. In the **Open** dialog box, browse to D:\\Labfiles\\Lab06\\Starter\\, click **New-FileShare_20533C06.ps1**, and then click **Open**.
 
 7. In the script pane, in the **$storageAccountName** variable declaration at the beginning, replace the `<your_storage_account_name>` value with the name of the Azure storage account that you created in the previous exercise.
 
@@ -269,7 +269,7 @@
 
 15. On the **Encryption Setting** page of the **Register Server Wizard**, click **Browse**.
 
-16. In the **Browse For Folder** dialog box, navigate to **D:\Labfiles\Lab06\Starter\** and click **OK**.
+16. In the **Browse For Folder** dialog box, navigate to D:\\Labfiles\\Lab06\\Starter\\ and click **OK**.
 
 17. Click **Finish**.
 
@@ -313,14 +313,14 @@
 
 5. On the **Backup items** blade, click **Azure Backup Agent**.
 
-6. On the **Backup Items (Azure Backup Agent)** blade, verify that there is an entry referencing the **D:\** drive of **mia-cl1.**.
+6. On the **Backup Items (Azure Backup Agent)** blade, verify that there is an entry referencing the **D:\\** drive of **mia-cl1.**.
 
 
 #### Task 6: Stop backups and delete the Azure Recovery services vault
   
-1. On the **Backup Items (Azure Backup Agent)** blade, click the entry referencing the **D:\** drive of **mia-cl1.**.
+1. On the **Backup Items (Azure Backup Agent)** blade, click the entry referencing the D:\\ drive of **mia-cl1.**.
 
-2. On the **D:\ on mia-cl1.** blade, click the **mia-cl1.** link.
+2. On the **D:\\ on mia-cl1.** blade, click the **mia-cl1.** link.
 
 3. On the **mia-cl1.** blade, click **Delete**. 
 
