--- a/Instructions/20533C_LAB_AK_07.md
+++ b/Instructions/20533C_LAB_AK_07.md
@@ -93,7 +93,7 @@
 
 4. In SQL Server Management Studio, click **File** menu, click **Open**, and then click **File**.
 
-5. In the **Open File** dialog box, browse to the **D:\Labfiles\Lab07\Starter** folder, click the **Operations.sql** file and click **Open**. Review the Transact-SQL code it contains.
+5. In the **Open File** dialog box, browse to the D:\\Labfiles\\Lab07\\Starter folder, click the **Operations.sql** file and click **Open**. Review the Transact-SQL code it contains.
 
 6. In the toolbar, in the drop-down list of availabile databases, click **operations**. Click **Execute**
 
@@ -238,7 +238,7 @@ GO
   
 1. Start Visual Studio, click **File**, click **Open**, and then click **Project/Solution**. 
 
-2. In the **Open Project** dialog box, navigate to the **D:\Labfiles\Lab07\Starter** folder, click **SalesApp.sln** and click **Open**.
+2. In the **Open Project** dialog box, navigate to the D:\\Labfiles\\Lab07\\Starter folder, click **SalesApp.sln** and click **Open**.
 
 3. In Solution Explorer, click **Web.config**.
 
