--- a/Instructions/20533C_LAB_AK_08.md
+++ b/Instructions/20533C_LAB_AK_08.md
@@ -78,7 +78,7 @@
 
 2. Click **File**, click **Open**, and then click **File**.
 
-3. Browse to **D:\LabFiles\Lab08\Starter\Production\Package**.
+3. Browse to D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
 4. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
 
@@ -202,7 +202,7 @@
 
 10. Next to the **Configuration (.cscfg)** box, click the folder icon.
 
-11. In the **Choose File to Upload** dialog box, browse to **D:\LabFiles\Lab08\Starter\Production\Package**.
+11. In the **Choose File to Upload** dialog box, browse to D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
 12. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
 
@@ -240,7 +240,7 @@
 
 6. Next to the **Package (.cspkg, .zip)** text box, click the folder icon.
 
-7. In the **Choose File to Upload** dialog box, browse to **D:\LabFiles\Lab08\Starter\Staging\Package**.
+7. In the **Choose File to Upload** dialog box, browse to D:\\LabFiles\\Lab08\\Starter\\Staging\\Package.
 
 8. Click **AdatumAds.cspkg**, and then click **Open**.
 
@@ -248,7 +248,7 @@
 
 10. Next to the **Configuration (.cscfg)** box, click the folder icon.
 
-11. In the **Choose File to Upload** dialog box, browse to **D:\LabFiles\Lab08\Starter\Production\Package**.
+11. In the **Choose File to Upload** dialog box, browse to D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
 12. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
 
