--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -229,7 +229,7 @@
 
 2. In the PowerShell ISE, click **File**, and then click **Open**.
 
-3. In the **Open** dialog box, browse to**D:\Labfiles\Lab09\Starter\**.
+3. In the **Open** dialog box, browse to D:\\Labfiles\\Lab09\\Starter\\.
 
 4. Click **Set-AzureAD20553C09Lab.ps1**, and then click **Open**.
 
