--- a/Instructions/20533C_LAB_AK_10.md
+++ b/Instructions/20533C_LAB_AK_10.md
@@ -30,7 +30,7 @@
 
 11. When prompted whether to open or save the .rdp flie, click **Open**.
 
-12. In the **Windows Security** dialog box, enter a user name of **ADATUM\Student** with the password **Pa55w.rd1234** and click **OK**.
+12. In the **Windows Security** dialog box, enter a user name of **ADATUM\\Student** with the password **Pa55w.rd1234** and click **OK**.
 
 13. In the **Remote Desktop Connection** dialog box, click **Yes**.
 
@@ -143,7 +143,7 @@
   - PASSWORD: **Pa55w.rd**
 
 
-1. On the **Connect your directories** page, verify that the **adatum.com** forest is selected, under user name, type **ADATUM\Student** with the password **Pa55w.rd1234**, click **Add Directory**, and click **Next**.
+1. On the **Connect your directories** page, verify that the **adatum.com** forest is selected, under user name, type **ADATUM\\Student** with the password **Pa55w.rd1234**, click **Add Directory**, and click **Next**.
 
 2. On the **Azure AD sign-in configuration**, note the message **Users will not be able to sign-in Azure AD using their on-premises credentials**. This is expected since you do not have a verified domain name. Enable the **Continue without any verified domains** checkbox and click **Next**.
 
