--- a/Instructions/20533C_LAB_AK_11.md
+++ b/Instructions/20533C_LAB_AK_11.md
@@ -123,7 +123,7 @@
 4. On the **Import** blade, specify the following and click **Create**:
 
 
-  - Runbook file: **D:\Labfiles\Lab11\Starter\Stop-AzureRm20533C11VMs.ps1**
+  - Runbook file: **D:\\Labfiles\\Lab11\\Starter\\Stop-AzureRm20533C11VMs.ps1**
 
   - Runbook type: **PowerShell Workflow**
 
