--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -199,7 +199,7 @@
 
   ```
   Get-AzureSubscription
-  Set-AzureSubsciption -SubscriptionId 'SubscriptionId'
+  Set-AzureSubscription -SubscriptionId 'SubscriptionId'
   ```
 
 13. At the Windows PowerShell command prompt, type the following command, and then press Enter:
