Azure portal interface updates

--- a/Instructions/20533C_LAB_01.md
+++ b/Instructions/20533C_LAB_01.md
@@ -65,15 +65,17 @@ In the Azure portal, you must observe the organization of resources and customiz
 
 - set the size of the **All resources** tile to **4x6**.
 
-- set the size of the **Service health** tile to **4x4**.
+- set the size of the **Azure health** tile to **4x4**.
 
-3. Drag the **Service health** tile up to the top of the dashboard until its top edge aligns with the top edge of the **All resources** tile.
+- rearrange the remaining tiles by moving them to the left
+
+3. Drag the **Azure health** tile up to the top of the dashboard until its top edge aligns with the top edge of the **All resources** tile.
 
 4. Pin **Virtual machine scale sets** to the hub menu.
 
 #### Task 3: Use the Azure account portal
   
-1. In Internet Explorer, navigate to the account portal. If prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+1. In Internet Explorer, navigate to the account portal. If prompted, sign in by using the Microsoft account that is the Account Administrator of your Azure subscription.
 
 2. On the summary page, review the billing summary for your subscription on the page.
 
@@ -177,7 +179,7 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, start a Windows PowerShell ISE as Administrator. 
 
-2. From the Windows PowerShell Integrated Scripting Environment (ISE), authenticate to your Azure subscription by running:
+2. From the Windows PowerShell Integrated Scripting Environment (ISE), sign in by using the Microsoft account that is the Service Administrator of your Azure subscription by running:
   ```
 Login-AzureRmAccount
   ```
@@ -213,12 +215,12 @@ $rg2 = New-AzureRmResourceGroup -Name $rg2Name -Location $locName
 $res = Get-AzureRmResource -ResourceName $resName -ResourceGroupName $rg1Name
   ```
 
-6. Under the line that states **# Move the resource to the new resource group**, add and execute the following line:
+6. Under the line that states **# Move the resource to the new resource group**, add and execute the following line (click **Yes** when prompted whether you want to proceed):
   ```
 Move-AzureRmResource -DestinationResourceGroupName $rg2Name -ResourceId $res.ResourceId
   ```
 
-7. Under the line that states **# View resources in the new resource group**, add and execute the following line:
+7. Wait for the move to complete (monitor the progress bar displayed in the Administrator: Windows PowerShell ISE window). Next, under the line that states **# View resources in the new resource group**, add and execute the following line:
   ```
 Get-AzureRmResource | Where-Object ResourceGroupName -eq $rg2Name
   ```
@@ -234,7 +236,7 @@ Get-AzureRmResource | Where-Object ResourceGroupName -eq $rg2Name
 Reset-Azure
   ```
 
-4. When prompted (twice), sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+4. When prompted (twice), sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 5. If you have multiple Azure subscriptions, select the one you want the script to target.
 
