Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_01.md
+++ b/Instructions/20533C_LAB_AK_01.md
@@ -31,21 +31,21 @@
 
 2. On the **Dashboard** page, at the top of the screen, click **Edit dashboard**.
 
-3. On the **Dashboard** page, on the **All resources** tile, click the **ellipses (…)**, and then click **4x6**.
+3. On the **Dashboard** page, on the **All resources** tile, click the **ellipses (…)**, click **Customize**, and then click **4x6**.
 
-4. On the **Dashboard** page, on the **Service health** tile, click the **ellipses (…)**, and then click **4x4**.
+4. On the **Dashboard** page, on the **Azure health** tile, click the **ellipses (…)**, click **Customize**, and then click **4x4**.
 
-5. Drag the **Service health** tile up to the top of the dashboard until its top edge aligns with the top edge of the **All resources** tile.
+5. Drag the **Azure health** tile up to the top of the dashboard until its top edge aligns with the top edge of the **All resources** tile.
 
-5. On the **Dashboard** page, at the top of the screen, click **Done customizing**.
+6. On the **Dashboard** page, rearrange the remaining tiles by moving them to the left and, at the top of the screen, click **Done customizing**.
 
-6. On the **Dashboard** page, on the **Hub** menu, click **More services**, and then click the star beside **Virtual machine scale sets**
+7. On the **Dashboard** page, in the **Hub** menu, click **More services**, and then click the star beside **Virtual machine scale sets**
 
 #### Task 3: Use the Azure account portal
   
 1. Start Internet Explorer, browse to **https://account.windowsazure.com**
 
-2. On the Account page, click **SIGN IN** and, if prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+2. On the Account page, click **SIGN IN** and, if prompted, sign in by using the Microsoft account that is the Account Administrator of your Azure subscription.
 
 3. On the Account portal page, on the **subscriptions** tab, click the name of your subscription. 
 
@@ -107,7 +107,7 @@
 
 3. On the Tags blade, in the **Key** box, type **project**, and then in the **Value** box, type **test**. Click **Save**.
 
-4. On the resource group blade, click the Route table resource you created in the previous task.
+4. Click **Overview** and, on the resource group blade, click the Route table resource you created in the previous task.
 
 5. On the AdatumRT01 blade, click **Tags**. 
 
@@ -133,23 +133,19 @@
 
 4. On the access control (IAM) blade of the resource group, click **Add**.
 
-5. On the **Select a role** blade, click **Owner**.
+5. On the **Add permissions** blade, in the Role drop-down list, click **Owner**.
 
-6. On the **Add users** blade, click the name of the user you added earlier as a Co-Administrators of your subscription and click **Select**.
+6. On the **Add permissions** blade, click the name of the user you added earlier as a Co-Administrators of your subscription and click **Save**. Note that, once the change is saved, the user is listed as the owner.
 
-7. Click **OK**.
+7. Start Internet Explorer, browse to **https://manage.windowsazure.com**, and, if prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-8. Scroll back to the access control (IAM) blade of the resource group and note that the user has been added to the user list as the owner.
+8. On the Azure classic portal page, in the navigation bar, scroll down, and then click **SETTINGS**.
 
-9. Start Internet Explorer, browse to **https://manage.windowsazure.com**, and, if prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+9. On the settings page, click **ADMINISTRATORS**.
 
-10. On the Azure classic portal page, in the navigation bar, scroll down, and then click **SETTINGS**.
+10. Click the Microsoft account you added in the first exercise of this lab as a Co-Administrator and then, at the bottom of the pane, click **REMOVE**.
 
-11. On the settings page, click **ADMINISTRATORS**.
-
-12. Click the Microsoft account you added in the first exercise of this lab as a Co-Administrator and then, at the bottom of the pane, click **REMOVE**.
-
-13. When prompted to confirm, click **YES** 
+11. When prompted to confirm, click **YES** 
 
 >  Note that in this particular case, the account you are using is already a co-administrator, which is not a subject to RBAC. Revoking the Co-Administrator privileges from the account will allow for RBAC to take effect. Revoking the Co-Administrator privileges does not remove the account from the Azure AD tenant associated with your subscription.
 
@@ -167,7 +163,7 @@
 Login-AzureRmAccount
   ```
 
-3. In the sign-in windows that appears, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+3. In the sign-in windows that appears, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 4. In the Windows PowerShell ISE window, in the console pane, type the following cmdlet and then press Enter:
   ```
@@ -233,7 +229,7 @@ Login-AzureRmAccount
   Reset-Azure
   ```
 
-4. When prompted (twice), sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+4. When prompted (twice), sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 5. If you have multiple Azure subscriptions, select the one you want the script to target.
 
