Azure portal interface updates

--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -316,7 +316,7 @@ The main tasks for this exercise are as follows:
 4. From the Windows PowerShell prompt, create a root certificate by running:
  
   ```
-  $rootCert=New-SelfSignedCertificate -KeySpec KeyExchange -Subject 'CN=AdatumRootCertificate' -KeyExportPolicy Exportable -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumRootCertificate'
+  $rootCert = New-SelfSignedCertificate -KeySpec KeyExchange -Subject 'CN=AdatumRootCertificate' -KeyExportPolicy Exportable -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumRootCertificate'
   ```
 
 5. From the Windows PowerShell prompt, retrieve the public key of the root certificate by running:
@@ -324,27 +324,33 @@ The main tasks for this exercise are as follows:
   [System.Convert]::ToBase64String($rootCert.RawData)
   ```
 
-6. Copy the the output of the previous command to the clipboard.
+6. Copy the output of the previous command to Clipboard.
 
-7. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
+7. Paste the content of Clipboard into Notepad.
 
-8. In the **NAME** text box to the left, type **AdatumRootCertificate** and save the change.
+8. In Notepad, remove all line breaks and any trailing spaces.
 
-9. Switch back to the Windows PowerShell window.
+9. Copy the content of Notepad into Clipboard.
 
-10. At the Windows PowerShell prompt, run the following command:
+10. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
+
+11. In the **NAME** text box to the left, type **AdatumRootCertificate** and save the change.
+
+12. Switch back to the Windows PowerShell window.
+
+13. At the Windows PowerShell prompt, run the following command:
 
   ```
   New-SelfSignedCertificate -Subject 'CN=AdatumClientCertificate' -KeyExportPolicy Exportable -KeySpec KeyExchange -NotAfter (Get-Date).AddMonths(96) -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumClientCertificate' -Signer $rootCert
   ```
 
-11. At the Windows PowerShell prompt, run the following command:
+14. At the Windows PowerShell prompt, run the following command:
 
   ```
   Get-ChildItem Cert:\CurrentUser\My\
   ```
 
-12. Verify that both the **AdatumClientCertificate** and **AdatumRootCertificate** display in the Personal store.
+15. Verify that both the **AdatumClientCertificate** and **AdatumRootCertificate** display in the Personal store.
 
 
 
