Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -16,9 +16,9 @@
   
 1. In Internet Explorer, under Virtual Network with two Subnets, click **Deploy to Azure**.
 
-2. When prompted, sign in by using the Microsoft account that is either the Service Administrator or Co-Administrator of your Azure subscription.
+2. When prompted, sign in by using the Microsoft account that is either the Service Administrator or a Co-Administrator of your Azure subscription.
 
-3. In the Azure portal, in the **Create a Virtual Network with two Subnets** blade, click the **Edit** link.
+3. In the Azure portal, in the **Create a Virtual Network with two Subnets** blade, click **Edit template**.
 
 4. Review the structure of the JavaScript Object Notation (JSON) file. Examine the placeholders for values that can be edited during the deployment. This template contains the following parameters: _vnetName_,  _vnetAddressPrefix_, _subnet1Name_, _subnet1Prefix_, _subnet2Name_, _subnet2Prefix_.
 
@@ -137,7 +137,7 @@
 
 3. In the Windows PowerShell ISE window, click **Debug** and then click **Run/Continue**.
 
-4. When prompted to sign in (twice), type in the user name and the password which is either the Service Administrator or a Co-Admin in your Azure subscription.
+4. When prompted to sign in (twice), type in the user name and the password which is either the Service Administrator or a Co-Administrator in your Azure subscription.
 
 5. If you have multiple subscription, when prompted, type in the number corresponding to the subscription to which you deployed the virtual network in the first exercise of this lab and press **Enter**.
 
@@ -173,7 +173,7 @@
 
 2. On the Virtual networks blade, click **HQ**.
 
-3. On the HQ blade, in the **Connected devices** section, click **gatewayARM**. On the gatewayARM blade, take the note of the value of the **Public IP address** entry. 
+3. On the HQ blade, in the **Connected devices** section, click **gatewayARM**. On the gatewayARM blade, take note of the value of the **Public IP address** entry. 
 
 4. Start File Explorer and browse to D:\\Configfiles\\Lab02 folder.
 
@@ -236,7 +236,7 @@
 
 2. On the **Virtual networks** blade, click **HQ**.
 
-3. On the **HQ** blade, in the **connected devices** section of the **Overview** page, click **gatewayARM**.
+3. On the **HQ** blade, in the **connected devices** section of the **Overview** blade, click **gatewayARM**.
 
 4. On the gatewayARM blade, click **Point-to-site configuration**.
 
@@ -249,7 +249,7 @@
 10.  Type the following command, and then press Enter:
 
   ```
-  $rootCert=New-SelfSignedCertificate -KeySpec KeyExchange -Subject 'CN=AdatumRootCertificate' -KeyExportPolicy Exportable -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumRootCertificate'
+  $rootCert = New-SelfSignedCertificate -KeySpec KeyExchange -Subject 'CN=AdatumRootCertificate' -KeyExportPolicy Exportable -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumRootCertificate'
   ```
 
 11. Type the following command, and then press Enter:
@@ -258,29 +258,35 @@
   [System.Convert]::ToBase64String($rootCert.RawData)
   ```
 
-12. Select the the output of the previous command and press Enter.
+12. In the Windows PowerShell window, select the the output of the previous command and press Enter to copy it into Clipboard.
 
-13. Switch back to Internet Explorer.
+13. Start Notepad and paste the entire content you copied into Clipboard. 
 
-14. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
+14. In Notepad, remove all line breaks and any trailing spaces.
 
-15. In the **NAME** text box to the left, type **AdatumRootCertificate** and click **Save**.
+15. Copy the content of Notepad into Clipboard.
 
-16. Switch back to the Windows PowerShell window.
+16. Switch back to Internet Explorer.
 
-17. At the Windows PowerShell prompt, type the following command, and then press Enter:
+17. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
+
+18. In the **NAME** text box to the left, type **AdatumRootCertificate** and click **Save**.
+
+19. Switch back to the Windows PowerShell window.
+
+20. At the Windows PowerShell prompt, type the following command, and then press Enter:
 
   ```
   New-SelfSignedCertificate -Subject 'CN=AdatumClientCertificate' -KeyExportPolicy Exportable -KeySpec KeyExchange -NotAfter (Get-Date).AddMonths(96) -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumClientCertificate' -Signer $rootCert
   ```
 
-18. At the Windows PowerShell prompt, run the following command:
+21. At the Windows PowerShell prompt, run the following command:
 
   ```
   Get-ChildItem Cert:\CurrentUser\My\
   ```
 
-19. Verify that both the **AdatumClientCertificate** and **AdatumRootCertificate** display in the Personal store.
+22. Verify that both the **AdatumClientCertificate** and **AdatumRootCertificate** display in the Personal store.
 
 
 #### Task 2: Connect to the HQ virtual network via Point-to-Site VPN
@@ -289,7 +295,7 @@
 
 2. On the **gatewayARM - Point-to-site configuration** blade, click **Download VPN client**.
 
-3. On the **Download VM client** blade, ensure that the **AMD64** option is selected and click **Download**.
+3. On the **Download VM client** blade, ensure that the **x64** option is selected and click **Download**.
 
 4. When prompted whether to save or run the file, click **Run**.
 
