Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -249,7 +249,7 @@
 10.  Type the following command, and then press Enter:
 
   ```
-  $rootCert = New-SelfSignedCertificate -KeySpec KeyExchange -Subject 'CN=AdatumRootCertificate' -KeyExportPolicy Exportable -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumRootCertificate'
+  $rootCert = New-SelfSignedCertificate -Type Custom -KeySpec Signature -Subject 'CN=AdatumRootCertificate' -KeyExportPolicy Exportable -HashAlgorithm sha256 -KeyLength 2048 -CertStoreLocation 'Cert:\CurrentUser\My' -KeyUsageProperty Sign -KeyUsage CertSign -FriendlyName 'AdatumRootCertificate'
   ```
 
 11. Type the following command, and then press Enter:
@@ -277,7 +277,7 @@
 20. At the Windows PowerShell prompt, type the following command, and then press Enter:
 
   ```
-  New-SelfSignedCertificate -Subject 'CN=AdatumClientCertificate' -KeyExportPolicy Exportable -KeySpec KeyExchange -NotAfter (Get-Date).AddMonths(96) -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumClientCertificate' -Signer $rootCert
+  New-SelfSignedCertificate -Type Custom -KeySpec Signature -Subject 'CN=AdatumClientCertificate' -KeyExportPolicy Exportable -HashAlgorithm sha256 -KeyLength 2048 -CertStoreLocation 'Cert:\CurrentUser\My' -Signer $rootCert -TextExtension @("2.5.29.37={text}1.3.6.1.5.5.7.3.2") -FriendlyName 'AdatumClientCertificate'
   ```
 
 21. At the Windows PowerShell prompt, run the following command:
@@ -362,11 +362,11 @@
   
 1. On MIA-CL1, in Internet Explorer, in the Azure portal, in the hub menu, click **More services** and, in the list of services, click **Virtual machines (classic)**.
 
-2. On the Virtual machines (classic) blade, click **ClassicSrv1**.
+2. On the Virtual machines blade, click **ClassicSrv1**.
 
 3. On the **ClassicSrv1** blade, click **Connect**. If prompted by the pop-up blocker, allow the pop-up.
 
-4. When prompted whether to open or save the .rdp file, click **Open**.
+4. When prompted whether to open or save the .rdp file, click **Open**. If prompted **How do you want to open this file?**, click **Remote Desktop Connection** and click **OK**.
 
 5. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
 
@@ -396,7 +396,7 @@
 
   - Password: **Pa55w.rd1234**
 
-1. If another Remote Desktop Message displays, select **Don't ask me again for connections to this computer**, and then click **Yes**.
+9. If another Remote Desktop Message displays, select **Don't ask me again for connections to this computer**, and then click **Yes**.
 
 
 
