Azure portal interface updates

--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -316,7 +316,7 @@ The main tasks for this exercise are as follows:
 4. From the Windows PowerShell prompt, create a root certificate by running:
  
   ```
-  $rootCert = New-SelfSignedCertificate -KeySpec KeyExchange -Subject 'CN=AdatumRootCertificate' -KeyExportPolicy Exportable -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumRootCertificate'
+  $rootCert = New-SelfSignedCertificate -Type Custom -KeySpec Signature -Subject 'CN=AdatumRootCertificate' -KeyExportPolicy Exportable -HashAlgorithm sha256 -KeyLength 2048 -CertStoreLocation 'Cert:\CurrentUser\My' -KeyUsageProperty Sign -KeyUsage CertSign -FriendlyName 'AdatumRootCertificate'
   ```
 
 5. From the Windows PowerShell prompt, retrieve the public key of the root certificate by running:
@@ -341,7 +341,7 @@ The main tasks for this exercise are as follows:
 13. At the Windows PowerShell prompt, run the following command:
 
   ```
-  New-SelfSignedCertificate -Subject 'CN=AdatumClientCertificate' -KeyExportPolicy Exportable -KeySpec KeyExchange -NotAfter (Get-Date).AddMonths(96) -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumClientCertificate' -Signer $rootCert
+  New-SelfSignedCertificate -Type Custom -KeySpec Signature -Subject 'CN=AdatumClientCertificate' -KeyExportPolicy Exportable -HashAlgorithm sha256 -KeyLength 2048 -CertStoreLocation 'Cert:\CurrentUser\My' -Signer $rootCert -TextExtension @("2.5.29.37={text}1.3.6.1.5.5.7.3.2") -FriendlyName 'AdatumClientCertificate'
   ```
 
 14. At the Windows PowerShell prompt, run the following command:
