Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_03.md
+++ b/Instructions/20533C_LAB_AK_03.md
@@ -7,7 +7,7 @@
   
 1. On MIA-CL1, in Internet Explorer, browse to the Azure portal at **https://portal.azure.com**, and then press **Enter**.
 
-2. Sign in using the Microsoft account that is either the Service Administrator or Co-administrator of your subscription.
+2. Sign in using the Microsoft account that is either the Service Administrator or a Co-Administrator of your subscription.
 
 3. On the Hub menu, click **Virtual machines**, and then, on the Virtual machines blade, click **Add**.
 
@@ -31,7 +31,7 @@
 
 2. Accept the default Location value and click **OK**.
 
-3. On the Choose a size blade, click **A1 Standard**, and then click **Select**.
+3. On the Choose a size blade, click **D1_V2 Standard**, and then click **Select**.
 
 4. On the Settings blade, ensure that **Use managed disk** is set to **No** and that **HQ-VNET** is selected as the **Virtual network**.
 
@@ -58,7 +58,7 @@
 
 4. In the Windows PowerShell ISE, click the **Run Script** icon or press F5.
 
-5. When prompted, sign in using the Microsoft account that is either the Service Administrator or Co-administrator of your subscription.
+5. When prompted, sign in using the Microsoft account that is either the Service Administrator or a Co-Administrator of your subscription.
 
 6. If you have multiple subscriptions, select the one you used when running **Setup-Azure** at the beginning of this module.
 
@@ -89,7 +89,7 @@
 2. In the Internet Explorer window, in the Azure portal, on the Hub menu, click **All resources**.
 > **Note:** Both ResDevDB1 and ResDevDB2 are listed, along with the network and storage resources that you created in the previous exercise.
 
-3. On the Hub menu, click **Virtual machines**.
+3. In the Hub menu, click **Virtual machines**.
 
 4. On the Virtual machines blade, click **ResDevDB1**.
 
@@ -115,7 +115,7 @@
 
 2. In Visual Studio, click **File**, click **Open**, click **Project/Solution**, and then browse to D:\\Labfiles\\Lab03\\Starter\\ResDev\\ResDevLinuxDeploy.
 
-3. In the Open Project window, click **ResDevLinuxDeploy.sln**, and then click **Open**.
+3. In the Open Project window, click **ResDevLinuxDeploy.sln**, and then click **Open**. If prompted, in the Security Warning for ResDevLinuxDeploy dialog box, clear the checkbox **Ask me for every project in this solution** and click **OK**.
 
 4. In Visual Studio, click Solution Explorer and, in the Solution Explorer window, expand **Templates**, and then click **azuredeploy.json**.
 
@@ -143,9 +143,9 @@
 
   - subnetName: **App**
 
-  - vmSize: **Standard_D1**
+  - vmSize: **Standard_D1_V2**
 
-  - ubuntuOSVersion: specify the most recent version or accept the default value
+  - ubuntuOSVersion: specify **16.04.0-LTS** or a more recent version if available
 
   - storageAccountType: **Standard_LRS**
 
@@ -154,7 +154,7 @@
 12. In the Deploy to Resource Group window, click **OK**.
 > **Note:** Deployment will run with the progress displayed in the Output pane. You can determine when a deployment is complete based on a message stating the template was deployed successfully to the resource group 20533C0301-LabRG.
 
-13. In the Solution Explorer pane, click **Azuredeploy.parameters.json**. In the main window pane, notice that the parameters that you entered in the first deployment are saved in this file. You can reuse these parameters for the deployment of the second app server.
+13. In the Solution Explorer pane, expand the **Templates** folder and click **Azuredeploy.parameters.json**. In the main window pane, notice that the parameters that you entered in the first deployment are saved in this file. You can reuse these parameters for the deployment of the second app server.
 
 14. In the Solution Explorer pane, right-click **ResDevLinuxDeploy**, click **Deploy**, and then click **20533C0301-LabRG**.
 
@@ -162,7 +162,7 @@
 
 16. In the Edit Parameters window, in the vmName **Value** box, type **ResDevApp2**, and then click **Save**.
 
-17. In the Deploy to Resource Group window, click **Deploy**.
+17. In the Deploy to Resource Group window, click **OK**.
 > **Note:** Deployment will run with the output that appears in the Output pane, which is at the bottom of the window. When deployment is complete, you will receive a message stating the template was deployed successfully to the resource group 20533C0301-LabRG.
 
 18. In the Visual Studio, click **File** and then on the drop-down menu, click **Close Solution**.
