Azure portal interface updates

--- a/Instructions/20533C_LAB_03.md
+++ b/Instructions/20533C_LAB_03.md
@@ -63,7 +63,7 @@ The main tasks for this exercise are as follows:
 
   - Location: _accept the default location, which should match the location of the resource group_
 
-  - Size: **A1 Standard**
+  - Size: **D1_V2 Standard**
 
   - Use managed disks: **No**
 
@@ -204,7 +204,7 @@ The main tasks for this exercise are as follows:
 
   - subnetName: **App**
 
-  - vmSize: **Standard_D1**
+  - vmSize: **Standard_D1_V2**
 
   - ubuntuOSVersion: choose the most recent version
 
